Re-formatting the Nav bar, fixing small bug where clicking on navigation links would hide the title behind the Nav bar, added svg images for webpage (not implemented yet).

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -18,7 +18,13 @@
 display: none;
 }
 
+.logo {
+  flex: 0.2; 
+}
 
+.nav-links {
+  flex: 0.6;
+}
 
 .show-mobile-nav {
 	position: fixed;
